<resources>
    <string name="app_name">M14-TP2</string>
    <string name="path_of_exile_logo">Path of Exile Logo</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="name">name</string>
    <string name="price">price</string>
    <string name="icon">Icon</string>
</resources>